Change npm ci to npm install in workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.version-check.outputs.version-changed == 'true'
-        run: npm ci
+        run: npm i
 
       - name: Run tests
         if: steps.version-check.outputs.version-changed == 'true'
