--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "start": "node index.js",
     "test": "node index.js ./"
   },
+  "files": [
+    "index.js",
+    "lib/",
+    ".defaultignore",
+    "README.md",
+    "LICENSE"
+  ],
   "keywords": [
     "cli",
     "files",
