--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1"
+  },
+  "dependencies": {
+    "ignore": "^7.0.5"
   }
 }
