feat: add concurrent file reader with size and binary content filtering, and include p-limit dependency

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript-eslint": "^8.48.1"
   },
   "dependencies": {
-    "ignore": "^7.0.5"
+    "ignore": "^7.0.5",
+    "p-limit": "^7.2.0"
   }
 }
