--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript-eslint": "^8.48.1"
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "ignore": "^7.0.5",
     "js-tiktoken": "^1.0.21",
     "p-limit": "^7.2.0"
