--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "chalk": "^5.6.2",
     "ignore": "^7.0.5",
     "js-tiktoken": "^1.0.21",
-    "p-limit": "^7.2.0"
+    "p-limit": "^7.2.0",
+    "yocto-spinner": "^1.0.0"
   }
 }
