--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "dependencies": {
     "chalk": "^5.6.2",
+    "clipboardy": "^5.0.1",
+    "commander": "^14.0.2",
     "ignore": "^7.0.5",
     "js-tiktoken": "^1.0.21",
     "p-limit": "^7.2.0",
