--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript-eslint": "^8.48.1"
   },
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "chalk": "^5.6.2",
     "clipboardy": "^5.0.1",
     "commander": "^14.0.2",
