--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "test": "node --import tsx --test \"tests/**/*.test.ts\"",
-    "prepublishOnly": "pnpm run clean && pnpm run build"
+    "prepublishOnly": "pnpm run clean && pnpm run build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "cli",
@@ -54,6 +56,7 @@
     "globals": "^16.5.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "vitest": "^4.0.15",
     "typescript-eslint": "^8.48.1"
   },
   "dependencies": {
