feat: migrate npm publish workflow to pnpm, lower Node.js engine requirement to 20, and add package homepage and bug tracker.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,16 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.24.0
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+          cache: "pnpm"
 
       - name: Check if version changed
         id: version-check
@@ -28,7 +33,7 @@ jobs:
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           echo "current-version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "package-name=$PACKAGE_NAME" >> $GITHUB_OUTPUT
-          
+
           if npm view $PACKAGE_NAME@$CURRENT_VERSION version 2>/dev/null; then
             echo "version-changed=false" >> $GITHUB_OUTPUT
           else
@@ -37,11 +42,11 @@ jobs:
 
       - name: Install dependencies
         if: steps.version-check.outputs.version-changed == 'true'
-        run: npm i
+        run: pnpm install --frozen-lockfile
 
       - name: Run tests
         if: steps.version-check.outputs.version-changed == 'true'
-        run: npm test
+        run: pnpm test
 
       - name: Publish to npm
         if: steps.version-check.outputs.version-changed == 'true'
@@ -59,9 +64,9 @@ jobs:
           release_name: Release v${{ steps.version-check.outputs.current-version }}
           body: |
             ## Release v${{ steps.version-check.outputs.current-version }}
-            
+
             **Install:** `npm install -g fullsend@${{ steps.version-check.outputs.current-version }}`
-            
+
             **npm:** https://www.npmjs.com/package/fullsend
           draft: false
           prerelease: false
