--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bundle files into a single formatted output for AI chat interfaces",
   "type": "module",
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=20.0.0"
   },
   "exports": {
     ".": {
@@ -44,6 +44,10 @@
   ],
   "author": "soradotwav <dev@soradotwav.com>",
   "license": "MIT",
+  "homepage": "https://github.com/soradotwav/fullsend#readme",
+  "bugs": {
+    "url": "https://github.com/soradotwav/fullsend/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/soradotwav/fullsend.git"
