fix: Correct package main entry point and remove `defineConfig` from ESLint configuration.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": [
     "dist"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
