--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "prepublishOnly": "pnpm run clean && pnpm run build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test": "true"
   },
   "keywords": [
     "cli",
